--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./app:/app/
     environment:
-      - VIRTUAL_HOST=landing.localhost,*.landing.localhost
+      - VIRTUAL_HOST=wordpress.localhost,*.wordpress.localhost
   db:
     image: mysql:5.7
     volumes:
