--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,6 @@
             "email": "pawel.cmachowski@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "minimum-stability": "stable"
 }
